--- a/action.yml
+++ b/action.yml
@@ -1,33 +1,38 @@
-name: GitHub Wiki Action
+name: Publish to GitHub wiki
+description: 📖 GitHub Action to sync a folder to the GitHub wiki
 author: Andrew Chen Wang <acwangpython@gmail.com>
-description: This action publishes Wiki pages with a provided directory into a GitHub repository's Wiki.
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
-inputs:
-  WIKI_DIR:
-    description: 'Directory to rsync files to the wiki.'
-    required: false
-    default: 'wiki/'
-  GH_TOKEN:
-    description: 'The GitHub Token for this action to use. Specify secrets.GITHUB_TOKEN.'
-    required: true
-  GH_MAIL:
-    description: 'The email associated with the token.'
-    required: true
-  GH_NAME:
-    description: 'The username associated with the token.'
-    required: true
-  REPO:
-    description: 'The target repository. Default is the current repo.'
-    required: false
-  WIKI_PUSH_MESSAGE:
-    description: 'The commit message for the wiki commit. Default is the commit to actual repository.'
-    required: false
-  EXCLUDED_FILES:
-    description: 'A list of files you want to exclude (separate with spaces).'
-    required: false
-
 branding:
-  icon: upload-cloud
+  icon: book-open
   color: blue
+inputs:
+  path:
+    description: >
+      Path to the wiki folder with Markdown files in it. Usually this is
+      something like "wiki" or "docs". Defaults to "wiki".
+    default: wiki
+  token:
+    description: >
+      The GitHub access token to use when pushing to the wiki. This can be the
+      github.token or the secrets.GITHUB_TOKEN value that is automatically
+      provided, or a custom PAT.
+    default: ${{ github.token }}
+  repo:
+    description: >
+      The GitHub repository whose wiki will be published to. If you set this,
+      make sure that you also provide a token! The default github.token won't
+      allow pushes to other repositories.
+    default: ${{ github.repository }}
+outputs:
+  page_url:
+    description: Deployed wiki URL. Links to the Home page of your GitHub wiki.
+    value: ${{ steps.index.outputs.page_url }}
+runs:
+  using: composite
+  steps:
+    - id: index
+      run: '"${GITHUB_ACTION_PATH%/}/index.sh"'
+      shell: bash
+      env:
+        INPUT_PATH: ${{ inputs.path }}
+        INPUT_TOKEN: ${{ inputs.token }}
+        INPUT_REPO: ${{ inputs.repo }}
